--- a/Changes
+++ b/Changes
@@ -1,5 +1,4 @@
 Revision history for Gimei
 
-0.01    Date/time
-        First version, released on an unsuspecting world.
-
+0.01    2012-12-09
+    - First release.
