--- a/Changes
+++ b/Changes
@@ -1,4 +1,5 @@
-Revision history for Gimei
+Revision history for Perl extension Data-Gimei
 
-0.01    2012-12-09
-    - First release.
+{{$NEXT}}
+
+    - original version
