--- a/Changes
+++ b/Changes
@@ -1,5 +1,11 @@
 Revision history for Perl extension Data-Gimei
 
+v0.0.3
+
+    - Support Romaji
+    - Introduce param 'gender' to new()
+    - Split .pm files by package
+
 v0.0.2
 
     - Change YAML module YAML::XS.
