--- a/Changes
+++ b/Changes
@@ -2,6 +2,8 @@ Revision history for Perl extension Data-Gimei
 
 {{$NEXT}}
 
+    - remove requirements of perl version on develop
+
 v0.0.5 2022-02-04T08:29:01Z
 
     - change requirements of perl version
