--- a/Changes
+++ b/Changes
@@ -3,6 +3,7 @@ Revision history for Perl extension Data-Gimei
 {{$NEXT}}
 
     - change OO systems Moo -> Class::Tiny
+    - organize modules
 
 v0.0.7 2022-05-06T05:47:29Z
 
