--- a/Changes
+++ b/Changes
@@ -4,6 +4,7 @@ Revision history for Perl extension Data-Gimei
 
     - change OO systems Moo -> Class::Tiny
     - organize modules
+    - update cpanfile
 
 v0.0.7 2022-05-06T05:47:29Z
 
