--- a/Changes
+++ b/Changes
@@ -7,6 +7,8 @@ Revision history for Perl extension Data-Gimei
     - update cpanfile
     - use VERSION instead of use feature.
     - rename first_name -> given, last_name -> family
+    - introduce Data::Gimei::Random
+    - delete Data::Gimei::random()
 
 v0.0.7 2022-05-06T05:47:29Z
 
