--- a/Changes
+++ b/Changes
@@ -2,6 +2,8 @@ Revision history for Perl extension Data-Gimei
 
 {{$NEXT}}
 
+    - update cpanfile
+
 v0.1.0 2022-05-24T20:07:31Z
 
     - change OO systems Moo -> Class::Tiny
