--- a/Changes
+++ b/Changes
@@ -2,6 +2,8 @@ Revision history for Perl extension Data-Gimei
 
 {{$NEXT}}
 
+    - add to_s()
+
 v0.1.1 2022-06-02T03:04:17Z
 
     - update cpanfile
