--- a/Changes
+++ b/Changes
@@ -2,6 +2,8 @@ Revision history for Perl extension Data-Gimei
 
 {{$NEXT}}
 
+    - use faster random number generator
+
 v0.2.0 2022-06-19T08:48:05Z
 
     - add method to_s() to Word/Name/Address
