update perl version in GitHub Actions

--- a/Changes
+++ b/Changes
@@ -2,6 +2,7 @@ Revision history for Perl extension Data-Gimei
 
 {{$NEXT}}
     - update cpanfile
+    - update Perl version in GitHub Actions
 
 v0.4.2 2024-01-04T06:43:57Z
     - update pod
