--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for Perl extension Data-Gimei
 
 {{$NEXT}}
+    - Add module dependencies
 
 v0.4.6 2026-01-17T03:32:19Z
     - Add development note
