--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for Perl extension Data-Gimei
 
 {{$NEXT}}
+    - Add compatibility section to README
 
 v0.4.7 2026-01-17T08:17:33Z
     - Add module dependencies
